# eqdsk

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  ACKNOWLEDGEMENTS.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml  todo.txt
.github/actions/setup-hatch/: action.yml
.github/workflows/: build.yml  docs.yml  lint-and-test.yml  lint.yml  main.yml  main_and_pr.yml  on_main.yml  on_pr.yml  on_push_dev_main.yml  pr.yml  publish-docs.yml  publish.yml  push-main.yml  release.yml  test.yml
.github/workflows/actions/hatch-lint/: action.yml
.github/workflows/actions/setup-hatch/: action.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/examples/: index.html
0.1/reference/eqdsk/__init__/: index.html
0.1/reference/eqdsk/cocos/: index.html
0.1/reference/eqdsk/errors/: index.html
0.1/reference/eqdsk/file/: index.html
0.1/reference/eqdsk/log/: index.html
0.1/reference/eqdsk/models/: index.html
0.1/reference/eqdsk/tools/: index.html
0.1/reference/overview/: index.html
docs/: index.md
docs/examples/: using_api.md
docs/reference/: cocos.py.md  file.py.md
documentation/: gen_api_ref.py
documentation/source/examples/: using_api.md  using_cli.md
eqdsk/: __init__.py  _version.py  cli.py  cocos.py  errors.py  file.py  imas.py  log.py  models.py  tools.py
eqdsk/cli/: __init__.py
examples/: index.html
examples/using_api/: index.html
examples/using_cli/: index.html
reference/eqdsk/__init__/: index.html
reference/eqdsk/cocos/: index.html
reference/eqdsk/errors/: index.html
reference/eqdsk/file/: index.html
reference/eqdsk/imas/: index.html
reference/eqdsk/log/: index.html
reference/eqdsk/models/: index.html
reference/eqdsk/tools/: index.html
reference/overview/: index.html
scripts/: gen_api_ref.py
search/: search_index.json
tests/: __init__.py  _helpers.py  conftest.py  test_cli.py  test_file.py  test_imas.py
tests/test_data/: DN-DEMO_eqref.json  DN-DEMO_eqref_withCoilNames.json
